[package]
name = "nethttp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonrpsee = {version="0.19.0",features=["full"]} 
hyper = { version = "1.0.0-rc.2", features = ["full"] }
tokio = "1.25.0"
tower-http = { version = "0.3.5", features = ["full"] }
tracing-subscriber ={version= "0.3.16",features=["env-filter"]}
tracing = "0.1.37"
anyhow = "1.0.69"
tower = "0.4.13"
http-body-util = "0.1.0-rc.2"
serde_json = "1.0.93"
bytes = "1.4.0"