[package]
name = "rustlang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
thiserror = "1.0.31"
env_logger = "0.9.0"

# pretty_env_logger = "0.4.0"
flexi_logger = {version="0.22.5",features=["use_chrono_for_offset"]}

serde_json = "1.0.79"
serde = "1.0.136"

rayon = "1.0.0"
typenum = "1.15.0"

lazy_static = "1.2"

log = "0.4.7"
hwloc = { version = "0.3.0" }
libc = "0.2"

tokio =  {version =  "1.20.1", features = ["full"]}

once_cell = "1.13.0"


# simple_logger = "2.2.0"


chrono = "0.4.19"
time = { version = "0.3", features = ["macros"] }


reqwest = { version="0.11.11", features=["blocking"]} 


crossbeam = "0.8.2"
crossbeam-utils = "0.8.11"


mapr = "0.8.0"

tempfile = "3.3.0"